--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-media-helper": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
